[tool.poetry]
name = "spelunk"
version = "0.1.4"
description = "Package with helpful object recursion utils"
authors = ["Spencer Tomarken <stomarken@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tomarken/spelunk"
repository = "https://github.com/tomarken/spelunk"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]
black = ">=22.10.0"
flake8 = ">=5.0.4"
pytest = "^7.1"
pytest-cov = "^3.0"

[tool.black]
    line-length = 100
    exclude = """
        .venv,
        .git,
        __pycache__,
        .pytest_cache,
    """

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
